; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/extr_ff_ffplay.c_ffp_get_current_position_l.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/extr_ff_ffplay.c_ffp_get_current_position_l.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i64, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i64 }

@AV_NOPTS_VALUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ffp_get_current_position_l(%struct.TYPE_9__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca double, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %11 = call i32 @assert(%struct.TYPE_9__* %10)
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 1
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  store %struct.TYPE_8__* %14, %struct.TYPE_8__** %4, align 8
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %16 = icmp ne %struct.TYPE_8__* %15, null
  br i1 %16, label %17, label %22

17:                                               ; preds = %1
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 1
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %19, align 8
  %21 = icmp ne %struct.TYPE_7__* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %17, %1
  store i64 0, i64* %2, align 8
  br label %73

23:                                               ; preds = %17
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 1
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  store i64 %28, i64* %5, align 8
  store i64 0, i64* %6, align 8
  %29 = load i64, i64* %5, align 8
  %30 = icmp sgt i64 %29, 0
  br i1 %30, label %31, label %38

31:                                               ; preds = %23
  %32 = load i64, i64* %5, align 8
  %33 = load i64, i64* @AV_NOPTS_VALUE, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %31
  %36 = load i64, i64* %5, align 8
  %37 = call i64 @fftime_to_milliseconds(i64 %36)
  store i64 %37, i64* %6, align 8
  br label %38

38:                                               ; preds = %35, %31, %23
  store i64 0, i64* %7, align 8
  %39 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %40 = call double @get_master_clock(%struct.TYPE_8__* %39)
  store double %40, double* %8, align 8
  %41 = load double, double* %8, align 8
  %42 = call i64 @isnan(double %41)
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %49

44:                                               ; preds = %38
  %45 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = call i64 @fftime_to_milliseconds(i64 %47)
  store i64 %48, i64* %7, align 8
  br label %53

49:                                               ; preds = %38
  %50 = load double, double* %8, align 8
  %51 = fmul double %50, 1.000000e+03
  %52 = fptosi double %51 to i64
  store i64 %52, i64* %7, align 8
  br label %53

53:                                               ; preds = %49, %44
  %54 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %55 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %60

58:                                               ; preds = %53
  %59 = load i64, i64* %7, align 8
  store i64 %59, i64* %2, align 8
  br label %73

60:                                               ; preds = %53
  %61 = load i64, i64* %7, align 8
  %62 = icmp slt i64 %61, 0
  br i1 %62, label %67, label %63

63:                                               ; preds = %60
  %64 = load i64, i64* %7, align 8
  %65 = load i64, i64* %6, align 8
  %66 = icmp slt i64 %64, %65
  br i1 %66, label %67, label %68

67:                                               ; preds = %63, %60
  store i64 0, i64* %2, align 8
  br label %73

68:                                               ; preds = %63
  %69 = load i64, i64* %7, align 8
  %70 = load i64, i64* %6, align 8
  %71 = sub nsw i64 %69, %70
  store i64 %71, i64* %9, align 8
  %72 = load i64, i64* %9, align 8
  store i64 %72, i64* %2, align 8
  br label %73

73:                                               ; preds = %68, %67, %58, %22
  %74 = load i64, i64* %2, align 8
  ret i64 %74
}

declare dso_local i32 @assert(%struct.TYPE_9__*) #1

declare dso_local i64 @fftime_to_milliseconds(i64) #1

declare dso_local double @get_master_clock(%struct.TYPE_8__*) #1

declare dso_local i64 @isnan(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
